[workspace]
resolver = "3"
members = ["aether-broker", "aether-client", "aether-common", "aether-worker"]

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
serde_json = "1"
axum = "0.8.6"
tower = "0.5.2"
anyhow = "1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
