[package]
name = "aether-broker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
anyhow.workspace = true
tower.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

aether-common = { path = "../aether-common" }
