[package]
name = "aether-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tower.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

base64 = "0.22"

aether-common = { path = "../aether-common" }

[dev-dependencies]
reqwest = "0.12"
aether-broker = { path = "../aether-broker" }
